updated images and added config manager support
darcs-hash:20070108214652-23886-830a4e13f0f46d21cdceb3a2b028450908813c2d.gz

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  * File: style.css for dokuwiki-plugin uparrow 
  * Author:  Michael Klier phpchi@chinux.de
  */
-p.plugin_uparrow {
+div.dokuwiki div.plugin_uparrow {
   margin-top:10px;
   margin-bottom:10px;
   margin-right:10px;
