--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 /**
- * File: style.css for dokuwiki-plugin uparrow 
- * Author:  Michael Klier phpchi@chinux.de
+ * CSS for DokuWiki Plugin Uparrow
+ * @author Michael Klier phpchi@chinux.de
  */
 div.dokuwiki div.plugin_uparrow {
   margin-top:10px;
   margin-bottom:10px;
-  margin-right:10px;
   text-align:right;
 }
